@@ -1,3 +1,8 @@
+2012-05-31  Norbert Preining  <preining@logic.at>
+
+	* updmap.pl: reset root $HOME if it is not the real one, since
+	sudo does not reset it
+
 2012-05-21  Norbert Preining  <preining@logic.at>
 
 	* updmap.pl
